dnl Process this file with autoconf to produce a configure script.
dnl $Id$

AC_INIT(configure.in)
AM_INIT_AUTOMAKE(openspeak, 0.1-git)

AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CXX
AC_LANG_C
AC_LANG_CPLUSPLUS

# check for C++ compiler explicitly and fail if none is found, do this check
# after AC_PROG_CXX has set the CXX environment variable
which $CXX >/dev/null 2>&1
if test "x$?" != "x0"; then
	AC_MSG_ERROR([No C++ compiler not found. Please install a C++ compiler.])
fi

#AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

# for plugins
AC_DISABLE_STATIC
AM_PROG_LIBTOOL
LIBTOOL="$LIBTOOL --silent"

# Checks for header files.
AC_CHECK_HEADERS([string iostream fstream sstream map vector exception \
		cstdlib cassert])
AC_CHECK_HEADERS([dirent.h limits.h sys/stat.h])

#TODO: Move this into an if platform == linux
AC_CHECK_HEADERS([linux/types.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_STRUCT_TM
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T
AC_TYPE_OFF_T
AC_HEADER_TIME
AC_STRUCT_TM


# Checks for library functions.
#AC_CHECK_FUNCS([])

# Set ${datadir}
if test "x${datadir}" = 'x${prefix}/share' -o "x${datarootdir}" = 'x${prefix}/share'; then
	if test "x${prefix}" = "xNONE"; then
		prefix=${ac_default_prefix}
	fi
fi

OS_DATA_DIR=`eval echo ${datarootdir}/openspeak`
OS_PREFIX=${prefix}
AC_SUBST(OS_DATA_DIR)
AC_SUBST(OS_PREFIX)

AC_OUTPUT([
    Makefile
    lib/Makefile
    lib/src/Makefile
    lib/include/Makefile
    server/Makefile
    server/src/Makefile
    server/include/Makefile
    client/Makefile
    client/src/Makefile
    client/include/Makefile
])

echo "----------------------------------------"
echo "Install openSpeak in ${prefix}"
echo ""
echo "Configuration is done OK."
echo ""
